# walrus

./: .changes.md.swp  .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PUBLISHING.md  README.md  batch-reader.md  batch_writer.md  changes.md  changes1.md  key-based-walrus-instances.md  live_scaling_plot.py  replication.md  satori_need.md  scaling_results.csv  scaling_results_live.csv  show_reads_graph.py  todo.md  visualize_throughput.py  wal.md
.github/workflows/: benchmark-batch.yml  benchmark-multithreaded-reads.yml  benchmark-multithreaded-writes.yml  benchmark-scaling.yml  ci.yml  distributed-walrus-tests.yml  docker-build.yml  tests.yml
benchmarks/: batch_scaling_benchmark.rs  multithreaded_benchmark.rs  multithreaded_benchmark_batch.rs  multithreaded_benchmark_reads.rs  multithreaded_benchmark_writes.rs  multithreaded_benchmark_writes_kafka.java  multithreaded_benchmark_writes_rocksdb.rs  scaling_benchmark.rs
distributed-walrus/: .dockerignore  .env.example  AUTHENTICATION.md  CLEANUP_DONE.md  Cargo.toml  DOCKER_DEPLOYMENT.md  Dockerfile  Makefile  README.md  REMOVAL_PLAN.md  docker-compose.test.yml  docker-compose.yml  pytest.ini
distributed-walrus/docs/: ARCHITECTURE.md  architecture.md  architecture.md.backup.bak  cli.md  production-ops.md  testing.md  usage.md
distributed-walrus/scripts/: demo_client.py  local_rollover_read_test.py  local_smoke.py  logging_smoke_test.py  multi_topic_stress_test.py  partition_test.py  recovery_test.py  resilience_test.py  rollover_read_test.py  stress_test.py  wait_for_ports.py
distributed-walrus/spec/: DistributedWalrus.cfg  DistributedWalrus.tla
distributed-walrus/src/: auth.rs  bucket.rs  cli_client.rs  client.rs  config.rs  controller.rs  fs_utils.rs  lib.rs  main.rs  metadata.rs  monitor.rs  rpc.rs  token.rs
distributed-walrus/src/controller/: fetch.rs  internal.rs  logical_wal.rs  mod.rs  produce.rs  topics.rs  types.rs
distributed-walrus/src/kafka/: codec.rs  mod.rs  protocol.rs  server.rs
distributed-walrus/tests/: cli_e2e.rs  conftest.py  test_cluster.py  test_distribution.py  throughput_local.rs
docs/: README.md  architecture.md  batch-reader.md  batch_writer.md  distributed_walrus.md  docker-vs-native-analysis.md  dotnet-client-improvements.md  dotnet-integration-guide.md  key-based-walrus-instances.md  ubuntu-setup-guide.md
octopii/examples/rpc/: main.rs
octopii/examples/rpc_shipping_lane/: main.rs
octopii/examples/shipping_lane/: main.rs
octopii/openraft/openraft/src/membership/: membership.rs
octopii/src/: config.rs
octopii/src/openraft/: node.rs
octopii/src/raft/: storage.rs
octopii/src/rpc/: handler.rs
octopii/src/transport/: mod.rs
octopii/src/wal/: mod.rs
octopii/src/wal/wal/runtime/: allocator.rs  walrus.rs  walrus_read.rs
raft_client/: Cargo.toml
raft_client/src/: main.rs
rocksdb_benchmark_db/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
rocksdb_benchmarks/: multithreaded_benchmark_writes.rs
scripts/: compare_walrus_rocksdb.py  live_scaling_plot.py  show_batch_scaling_graph.py  show_reads_graph.py  show_scaling_graph_writes.py  visualize_batch_benchmark.py  visualize_batch_benchmark_noninteractive.py  visualize_throughput.py  visualize_throughput_noninteractive.py
src/: lib.rs  wal.rs
src/wal/: block.rs  config.rs  mod.rs  paths.rs  runtime.rs  storage.rs
src/wal/kv_store/: ARCHITECTURE.md  USAGE.md  block.rs  config.rs  hint.rs  mod.rs  store.rs
src/wal/runtime/: allocator.rs  background.rs  index.rs  mod.rs  topic_clean.rs  walrus.rs  walrus_read.rs  walrus_write.rs  writer.rs
tests/: batch_read.rs  batch_writes.rs  configuration.rs  digest.txt  e2e_longrunning.rs  integration.rs  kv_benchmark.rs  kv_compaction_test.rs  kv_hint_test.rs  kv_store_test.rs  large_write_read_repro.rs  repro_issue.rs  rollback_recovery.rs  unit.rs
tests/common/: mod.rs
