[package]
name = "walrus"
version = "0.1.0"
edition = "2024"

[dependencies]
memmap2 = "0.9.8"
rkyv = { version = "0.7", features = ["validation", "strict"] }
rand = "0.8"

[[test]]
name = "multithreaded_benchmark_writes"
path = "benchmarks/multithreaded_benchmark_writes.rs"

[[test]]
name = "multithreaded_benchmark_reads"
path = "benchmarks/multithreaded_benchmark_reads.rs"

[[test]]
name = "scaling_benchmark"
path = "benchmarks/scaling_benchmark.rs"