[package]
name = "walrus-rust"
version = "0.1.0"
edition = "2024"
authors = ["nubskr <hello@nubskr.com>"]
description = "A high-performance Write-Ahead Log (WAL) implementation in Rust"
documentation = "https://docs.rs/walrus-rust"
repository = "https://github.com/nubskr/walrus"
license = "MIT"
keywords = ["wal", "write-ahead-log", "database", "logging", "persistence"]
categories = ["database-implementations", "data-structures", "concurrency"]
readme = "README.md"
exclude = [
    "target/*",
    "wal_files/*",
    "*.csv",
    "figures/*",
    "scripts/__pycache__/*"
]

[dependencies]
memmap2 = "0.9.8"
rkyv = { version = "0.7", features = ["validation", "strict"] }
rand = "0.8"
libc = "0.2.177"
io-uring = "0.7.10"

[[test]]
name = "multithreaded_benchmark_writes"
path = "benchmarks/multithreaded_benchmark_writes.rs"

[[test]]
name = "multithreaded_benchmark_reads"
path = "benchmarks/multithreaded_benchmark_reads.rs"

[[test]]
name = "scaling_benchmark"
path = "benchmarks/scaling_benchmark.rs"
