[package]
name = "walrus-rust"
version = "0.2.0"
edition = "2024"
authors = ["nubskr <hello@nubskr.com>"]
description = "A high-performance Write-Ahead Log (WAL) implementation in Rust"
documentation = "https://docs.rs/walrus-rust"
repository = "https://github.com/nubskr/walrus"
license = "MIT"
keywords = ["wal", "write-ahead-log", "database", "logging", "persistence"]
categories = ["database-implementations", "data-structures", "concurrency"]
readme = "README.md"
exclude = [
    "target/*",
    "wal_files/*",
    "*.csv",
    "figures/*",
    "scripts/__pycache__/*"
]

[dependencies]
rand = "0.8.5"
memmap2 = "0.9"
libc = "0.2"
rkyv = { version = "0.7", features = ["validation"] }
rkyv_derive = "0.7"
bytecheck = "0.6"
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.10"

[target.'cfg(target_os = "linux")'.dev-dependencies]
rocksdb = { version = "0.23", default-features = false }

[[test]]
name = "multithreaded_benchmark_writes"
path = "benchmarks/multithreaded_benchmark_writes.rs"

[[test]]
name = "multithreaded_benchmark_reads"
path = "benchmarks/multithreaded_benchmark_reads.rs"

[[test]]
name = "scaling_benchmark"
path = "benchmarks/scaling_benchmark.rs"

[[test]]
name = "multithreaded_benchmark_batch"
path = "benchmarks/multithreaded_benchmark_batch.rs"

[[test]]
name = "batch_scaling_benchmark"
path = "benchmarks/batch_scaling_benchmark.rs"

[[test]]
name = "rocksdb_multithreaded_benchmark_writes"
path = "benchmarks/multithreaded_benchmark_writes_rocksdb.rs"
