[package]
name = "distributed-walrus"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.2"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
figlet-rs = "0.1"
rustyline = "11"

walrus-rust = { path = ".." }
octopii = { path = "../octopii", features = ["openraft"] }
bcrypt = "0.15"
sha2 = "0.10"
jsonwebtoken = "9.3"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
